# mml-joint-detection

./: .gitignore  README.md  SersicTransform.py  System_1.yaml  System_2.yaml  bbh_pos.py  brentq.py  catalog_gen_test.ipynb  chebtools.py  detected_catalog.csv.dvc  detected_catalog_1.csv.dvc  detected_catalog_2.csv.dvc  detected_catalog_gw-em-1.csv.dvc  detected_catalog_gw-em.csv  detected_catalog_gw-em.csv.dvc  dvc.yaml  environment.yml  example_source_galaxy_params.ipynb  gen_cat.py  gen_catalog.py  gen_em_systems.py  gen_lens_catalog.py  gw_em_cat.py  gw_pop.py  hlens_play.py  image_snr_euclid.py  lens_light.py  lens_mass.py  ler_sigmaz.py  ler_tests.ipynb  likelihood.py  not_detected_catalog.csv  not_detected_catalog.csv.dvc  not_detected_catalog_1.csv  not_detected_catalog_1.csv.dvc  not_detected_catalog_2.csv  not_detected_catalog_2.csv.dvc  numerics.py  pyproject.toml  sample_in_polygon.py  (+4 more)
__pycache__/: chebtools.u2x-105.py310.1.nbc  chebtools.u2x-105.py310.2.nbc  chebtools.u2x-105.py310.3.nbc  chebtools.u2x-105.py310.4.nbc  chebtools.u2x-105.py310.nbi  chebtools.x2u-99.py310.1.nbc  chebtools.x2u-99.py310.2.nbc  chebtools.x2u-99.py310.3.nbc  chebtools.x2u-99.py310.4.nbc  chebtools.x2u-99.py310.nbi
source_galaxy/: gen_final_JADES_cat.py  sample_from_trained_de_b32_h128_e1000_bdef_wbounds.csv  train_maf.py  train_weighted_maf.py  update_jades_mock_cat.py
