[project]
name = "multimessenger-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "denmarf>=0.3.2",
    "jupyter>=1.1.1",
    "lenstronomy>=1.13.5",
    "ler>=0.5.9",
    "numdifftools>=0.9.42",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
]
